# weka_automation

Desktop/weka_a/: weka_automation.java
Downloads/project-1-sp_project_grp10-branch_y/: 100-md5-dump (1).txt  100-md5.hashes  100-passwords.txt  100-scrypt.hashes  100-sha256-dump.txt  100-sha256.hashes  100-sha3-512-dump.txt  100-sha3-512.hashes  CREDITS.md  Cargo.toml  HONESTY.md  README.md  dump-output.txt  test.txt
Downloads/project-1-sp_project_grp10-branch_y/cli/: Cargo.toml
Downloads/project-1-sp_project_grp10-branch_y/cli/src/: main.rs
Downloads/project-1-sp_project_grp10-branch_y/core/: Cargo.toml
Downloads/project-1-sp_project_grp10-branch_y/core/src/: dump_hashes.rs  gen_hashes.rs  gen_passwords.rs  lib.rs
