[package]
name = "hashassin"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.28", features = ["env", "wrap_help", "derive"] }
rand = "0.9.0"
tracing = "0.1.40"  # Added for tracing events in the cli crate
tracing-subscriber = "0.3.18"  # Added for formatting and outputting tracing events
# workspace dependency
hashassin-core = { path = "../core" }
color-eyre = "0.6.3"
base64 = "0.22"