[package]
name = "hashassin-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
crossbeam-channel = "0.5.14"
thiserror = "2.0.12"
md5 = "0.7.0"
sha2 = "0.10.6"
sha3 = "0.10.6"
scrypt = "0.10.0"
hex = "0.4"
tracing = "0.1.40"
base64 = "0.22"
tracing-subscriber = "0.3.18"  # Added for formatting and outputting tracing events
